Added correct Gradle repository settings

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 defaultTasks 'clean','test','aggregate'
 
 repositories {
-    mavenLocal()
+    mavenCentral()
 }
 
 sourceCompatibility = 1.8
