--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -20,5 +20,5 @@ serenity {
 #
 chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
-                   --incognito;--disable-infobars,--disable-gpu"""
+                   --incognito;--disable-infobars,--disable-gpu;--remote-allow-origins=*"""
 
