Adapted chrome switches to W3C standard

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,6 +6,18 @@
 webdriver {
   driver = chrome
   autodownload = true
+
+  capabilities{
+
+      "goog:chromeOptions" {
+           args = [ "test-type", "no-sandbox", "ignore-certificate-errors",
+                    "disable-popup-blocking", "disable-default-apps", "disable-extensions-file-access-check"
+                    "incognito", "disable-infobars", "disable-gpu", "remote-allow-origins=*",
+                    "start-maximized", "window-size=1920,1080"
+                   ]
+      }
+  }
+
 }
 headless.mode = true
 
@@ -14,11 +26,3 @@ serenity {
   compress.filenames = false
 //  take.screenshots = FOR_FAILURES
 }
-
-#
-# Chrome options can be defined using the chrome.switches property
-#
-chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
-                   --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
-                   --incognito;--disable-infobars,--disable-gpu;--remote-allow-origins=*"""
-
