--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -10,10 +10,10 @@ webdriver {
   capabilities{
 
       "goog:chromeOptions" {
-           args = [ "test-type", "no-sandbox", "ignore-certificate-errors",
+           args = [
+                    "start-maximized", "test-type", "no-sandbox", "ignore-certificate-errors",
                     "disable-popup-blocking", "disable-default-apps", "disable-extensions-file-access-check"
-                    "incognito", "disable-infobars", "disable-gpu", "remote-allow-origins=*",
-                    "start-maximized", "window-size=1920,1080"
+                    "incognito", "disable-infobars", "disable-gpu", "remote-allow-origins=*"
                    ]
       }
   }
