--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,6 +6,17 @@
 webdriver {
   driver = chrome
   autodownload = true
+
+    capabilities{
+
+        "goog:chromeOptions" {
+             args = [
+                      "start-maximized", "test-type", "no-sandbox", "ignore-certificate-errors",
+                      "disable-popup-blocking", "disable-default-apps", "disable-extensions-file-access-check"
+                      "incognito", "disable-infobars", "disable-gpu", "remote-allow-origins=*"
+                     ]
+        }
+    }
 }
 headless.mode = true
 
@@ -15,10 +26,4 @@ serenity {
 //  take.screenshots = FOR_FAILURES
 }
 
-#
-# Chrome options can be defined using the chrome.switches property
-#
-chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
-                   --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
-                   --incognito;--disable-infobars,--disable-gpu;--remote-allow-origins=*"""
 
